# smartalk_cms

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_DEPLOY.html  README_NGROK_INSTALL.html  docker-compose.yml  pyproject.toml
scripts/: start_ngrok_and_update_env.py
smartalk/: app.py
smartalk/core/: dynamodb.py  settings.py
smartalk/db_usage/: data_scheduler.py  dynamodb_auth.py  dynamodb_coach.py  dynamodb_student.py  sync_calendars.py
smartalk/email_and_automations/: report_card_sender.py
smartalk/routes/: auth.py  calendar_sync.py  coach.py  scheduler.py  student.py  website.py
smartalk/scripts/: create_booking_calendars.py  create_tables.py  executable_script_for_create_calendars.py  gmail_init_token.py  migrate_data.py  sync_local_to_aws.py
smartalk/website/: 404.html  _footer.html  _header.html  about.html  aboutus_specifics_en.html  app.js  assessment.html  assessment_main_content.html  base.html  base_styles.html  chisiamo_main_content.html  dashboard.html  home.html  homepage_en_main_content.html  homepage_main_content.html  legal_hiding_script.js  old_about_us_en.html  old_assessment.html  old_chi_siamo.html  old_dashboard.html  old_home.html  old_home_en.html  old_policy.html  old_terms.html  policy.html  policy_main_content_dual.html  terms.html  (+3 more)
website/: aboutus.html  aboutus_main_content_en.html  base_styles.html  chi_siamo.html  chisiamo_specifics.html  homepage.html  homepage_en.html  homepage_en_specifics.html  homepage_specifics.html  policy_en.html  styles.css  terms.html  terms_en.html  terms_main_content_dual.html  universal_footer.html  universal_header.html  universal_header_en.html  universal_scripts.js
(+197 files in other folders)
